[package]
name = "fuzzer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.22", features = ["full"] }
async-trait = "0.1"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"
thiserror = "1.0"
log = "0.4"
env_logger = "0.9"
uuid = { version = "1.10.0", features = ["v4"] }
futures = "0.3.30"
log4rs = "1.3.0"
prost = "0.13.3"
chrono = "0.4.38"
sha2 = "0.10.8"
